# dweb_browser_libs

./: .gitignore  README.md
rust_library/: .gitignore  Cargo.toml  build.gradle.kts  settings.gradle.kts
rust_library/biometrics/: Cargo.toml  README.md  biometrics.def  build.gradle.kts  build.rs
rust_library/biometrics/src/commonMain/kotlin/org/dweb_browser/biometrics/: biometrics.common.kt
rust_library/biometrics/src/desktopMain/kotlin/org/dweb_browser/biometrics/: biometrics.desktop.kt
rust_library/biometrics/uniffi/: biometrics.udl  uniffi.toml
rust_library/biometrics/uniffi/macos-lib/src/: lib.rs
rust_library/biometrics/uniffi/src/: lib.rs  macos.rs  windows.rs
rust_library/biometrics/uniffi/windows-lib/src/: lib.rs
rust_library/buildSrc/src/main/kotlin/: BuildTask.kt  Extension.kt  Platform.kt  Utils.kt  build-libs-plugin.gradle.kts
rust_library/gradle/: libs.versions.toml
rust_library/gradle/wrapper/: gradle-wrapper.properties
rust_library/hardware_info/: Cargo.toml  README.md  build.gradle.kts  build.rs  hardware_info.def
rust_library/hardware_info/src/commonMain/kotlin/org/dweb_browser/hardware_info/: hardware_info.common.kt
rust_library/hardware_info/src/desktopMain/kotlin/org/dweb_browser/hardware_info/: hardware_info.desktop.kt
rust_library/hardware_info/uniffi/: uniffi.toml
rust_library/keychainstore/: Cargo.toml  README.md  build.gradle.kts  build.rs
rust_library/keychainstore/src/commonMain/kotlin/org/dweb_browser/keychainstore/: keychainstore.common.kt
rust_library/keychainstore/src/desktopMain/kotlin/org/dweb_browser/keychainstore/: keychainstore.desktop.kt
rust_library/keychainstore/src/iosMain/kotlin/org/dweb_browser/keychainstore/: keychainstore.ios.kt
rust_library/keychainstore/src/nativeInterop/cinterop/: keychainstore.def
rust_library/keychainstore/src/nativeInterop/cinterop/headers/keychainstore/: keychainstore.h
rust_library/keychainstore/uniffi/: uniffi.toml
rust_library/mix_compression/: Cargo.toml  README.md  build.gradle.kts  build.rs
rust_library/mix_compression/src/androidMain/kotlin/org/dweb_browser/mix_compression/: mix_compression.android.kt
rust_library/mix_compression/src/commonMain/kotlin/org/dweb_browser/mix_compression/: mix_compression.common.kt
rust_library/mix_compression/src/iosMain/kotlin/org/dweb_browser/mix_compression/: mix_compression.ios.kt
rust_library/mix_compression/src/nativeInterop/cinterop/: mix_compression.def
rust_library/mix_compression/src/nativeInterop/cinterop/headers/mix_compression/: mix_compression.h
rust_library/mix_compression/uniffi/: uniffi.toml
rust_library/multipart/: Cargo.toml  README.md  build.gradle.kts  build.rs
rust_library/multipart/src/androidMain/kotlin/multipart/: multipart.jvm.kt
rust_library/multipart/src/commonMain/kotlin/multipart/: multipart.common.kt
rust_library/multipart/src/commonMain/kotlin/org/dweb_browser/multipart/: multipart.common.kt
rust_library/multipart/src/desktopMain/kotlin/org/dweb_browser/multipart/: multipart.desktop.kt
rust_library/multipart/src/iosMain/kotlin/multipart/: multipart.native.kt
rust_library/multipart/src/iosMain/kotlin/org/dweb_browser/multipart/: multipart.ios.kt
rust_library/multipart/src/nativeInterop/cinterop/: multipart.def
rust_library/multipart/src/nativeInterop/cinterop/headers/multipart/: multipart.h
rust_library/multipart/uniffi/: uniffi.toml
rust_library/resvg_render/: Cargo.toml  README.md  build.gradle.kts  build.rs
rust_library/resvg_render/src/commonMain/kotlin/org/dweb_browser/resvg_render/: resvg_render.common.kt
rust_library/resvg_render/src/desktopMain/kotlin/org/dweb_browser/resvg_render/: resvg_render.desktop.kt
rust_library/resvg_render/src/iosMain/kotlin/org/dweb_browser/resvg_render/: resvg_render.ios.kt
rust_library/resvg_render/src/nativeInterop/cinterop/: resvg_render.def
rust_library/resvg_render/src/nativeInterop/cinterop/headers/resvg_render/: resvg_render.h
rust_library/resvg_render/uniffi/: uniffi.toml
rust_library/reverse_proxy/: Cargo.toml  README.md  build.gradle.kts  build.rs
rust_library/reverse_proxy/src/commonMain/kotlin/reverse_proxy/: ForeignBytes.kt  ForeignCallback.kt  Pointer.kt  RustBuffer.kt  RustCallStatus.kt
rust_library/reverse_proxy/src/iosMain/kotlin/reverse_proxy/: Pointer.kt
rust_library/reverse_proxy/src/nativeInterop/cinterop/: reverse_proxy.def
rust_library/reverse_proxy/src/nativeInterop/cinterop/headers/reverse_proxy/: reverse_proxy.h
rust_library/reverse_proxy/uniffi/: reverse_proxy.udl  uniffi.toml
rust_library/reverse_proxy/uniffi/src/: lib.rs
rust_library/ziplib/: Cargo.toml  README.md  build.gradle.kts  build.rs  ziplib.def
rust_library/ziplib/src/commonMain/kotlin/ziplib/: ForeignBytes.kt  ForeignCallback.kt  Pointer.kt  RustBuffer.kt  RustCallStatus.kt
rust_library/ziplib/src/iosMain/kotlin/ziplib/: ForeignBytes.kt  Pointer.kt
rust_library/ziplib/src/nativeInterop/cinterop/headers/ziplib/: ziplib.h
rust_library/ziplib/uniffi/: uniffi.toml  ziplib.udl
rust_library/ziplib/uniffi/src/: lib.rs
(+7 files in other folders)
