[workspace]
members = [
    "ziplib",
    "reverse_proxy",
    "resvg_render"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
camino = "1.1.1"
once_cell = "1.18"
thiserror = "1"
tokio = "1"
uniffi = "=0.28.3"
uniffi_bindgen = "=0.28.3"
uniffi_macros = "=0.28.3"
uniffi_meta = "=0.28.3"

[profile.release]
opt-level = 3
lto = true