[package]
name = "keychainstore"
version = "0.1.1"
edition = "2021"

[lib]
name = "keychainstore"
crate-type = ["cdylib", "staticlib"]
path = "uniffi/src/lib.rs"

[dependencies]
uniffi = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
keychainstore-apple = { path = "./uniffi/apple-lib" }

[target.'cfg(target_os = "windows")'.dependencies]
keychainstore-windows = { path = "./uniffi/windows-lib" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }