[package]
name = "mix_compression"
version = "0.1.1"
edition = "2021"

[lib]
name = "mix_compression"
crate-type = ["lib", "cdylib", "staticlib"]
path = "uniffi/src/lib.rs"

[dependencies]
uniffi = { workspace = true }
zstd = "0.13.3"

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

