[package]
name = "multipart"
version = "0.1.0"
edition = "2021"

[lib]
name = "multipart"
crate-type = ["cdylib", "staticlib", "lib"]
path = "uniffi/src/lib.rs"

[features]
tokio-io = ["tokio-util"]

[dependencies]
uniffi = { workspace = true }

# lib deps
log = "*"
hyper = { version = "1.1.0", features = [
    "http1",
    "server"
] }
multer = "3.1.0"
http-body-util = "0.1"
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7", features = ["io"],  optional = true }
futures-util = { version = "0.3", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

